# PacreaticLUSSlicer

./: .gitignore  CMakeLists.txt  README.md
PancreaticLUS/: CMakeLists.txt  qSlicerPancreaticLUSModule.cxx  qSlicerPancreaticLUSModule.h  qSlicerPancreaticLUSModuleWidget.cxx  qSlicerPancreaticLUSModuleWidget.cxx.bac  qSlicerPancreaticLUSModuleWidget.h
PancreaticLUS/Logic/: imageProcessor.h  insertSlice.cpp  insertSlice.h  trackerParser.cpp  trackerParser.h  vtkSlicerPancreaticLUSLogic.cxx  vtkSlicerPancreaticLUSLogic.h
PancreaticLUS/Resources/: qSlicerPancreaticLUSModule.qrc
PancreaticLUS/Resources/UI/: qSlicerPancreaticLUSFooBarWidget.ui  qSlicerPancreaticLUSModuleWidget.ui
PancreaticLUS/Widgets/: qSlicerPancreaticLUSFooBarWidget.cxx  qSlicerPancreaticLUSFooBarWidget.h
